core/roboconf-core/src/test/resources/configurations/valid/real-lamp-facets.graph
###################################
## Group all the facets together ##
###################################


# The VM facet
facet VM {
	icon: vm.jpg;
	children: deployable;
	installer: target;
}

# The deployable facet
facet deployable {
	# nothing
}

# WAR  archives
facet war-archive {
	icon: war.png;
	installer: bash;
	exports: full-url, url-path;
}
