core/roboconf-core/src/test/resources/configurations/invalid/component-inexisting-child-facet.graph
VM {
    installer: target;
    children: A, Fa1, Fa3;
}

A {
    installer: puppet;
}

B {
	installer: whatever;
	facets: Fa1;
}

facet Fa1 {
	# nothing
}

facet Fa2 {
	# nothing
}
